HDX-6631 - [hdx] homepage search bar - is shrunk          - also fix hamburger menu not showing on the dataset light page for resolutions smaller than tablet

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/page-light.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/light/page-light.css
@@ -3736,9 +3736,6 @@ label.terms-of-service:after {
   margin: 0;
   display: block;
 }
-.navbar.new-header .navbar-toggle {
-  display: none;
-}
 .navbar.new-header.navbar-static-top {
   width: 100%;
 }
